# Softbank_proj

./: .gitattributes  .gitignore  LICENSE  README.md  __init__modified_chumpy.py  obj_to_ply.py  pyproject.toml
data/: demo.py  smal_CVPR2017_data.pkl
data/cows/: ._Davis_cow_00000.pkl  ._cow2.pkl  ._cow_alph.pkl  ._cow_alph4.pkl  ._cow_alph5.pkl  ._muybridge_076_04.pkl  ._muybridge_087_04.pkl  ._timthumb.pkl  Davis_cow_00000.pkl  cow2.pkl  cow_alph.pkl  cow_alph4.pkl  cow_alph5.pkl  muybridge_076_04.pkl  muybridge_087_04.pkl  timthumb.pkl
log/: Process_log.md
output/: alignment_transform.txt  convert_obj_to_ply.py
smal_viewer/: __init__.py  main.py
smal_viewer/gui/: viewer.py
smal_viewer/models/: smal_model.py  smpl_wrapper.py
smal_viewer/my_mesh/: render.ply  result.hip  retarget.py  retargeting_demo.py  template.pkl
smal_viewer/my_mesh/fake_lib/smpl_webuser/: __init__.py  lbs.py  posemapper.py  serialization.py  verts.py
smal_viewer/my_mesh/result/: template_smal.ply
smal_viewer/utils/: cow_loader.py  loader.py
test/: 4_24_report.ipynb  5_16_report.ipynb  render.ply  render_1000.ply  render_500.ply  render_geometry.ply  template.ply  template_1000.ply  template_500.ply  template_aligned.ply  test1.py  test_point_cloud_register.ipynb
